# oh-my-pi

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml
crates/pi-natives/src/: keys.rs  lib.rs  text.rs
crates/pi-natives/src/chunk/: edit.rs  resolve.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/minimizer/filters/: jvm.rs
docs/: compaction.md  keybindings.md  lsp-config.md  models.md  session-operations-export-share-fork-resume.md  tui-core-renderer.md
docs/tools/: web_search.md
src/robomp/: __init__.py  cli.py  config.py  dashboard.py  db.py  github_client.py  github_events.py  host_tools.py  logging_config.py  persona.py  queue.py  sandbox.py  server.py  tasks.py  worker.py
src/robomp/prompts/: followup_comment.md  followup_review.md  kickoff_issue.md  system_append.md
tests/: conftest.py  test_config.py  test_db.py  test_github_client.py  test_github_events.py  test_host_tools.py  test_sandbox.py  test_worker_smoke.py
